[MOD] Swagger ciclos
