# storage/api-docs/api-docs.json
@@ -130,13 +130,50 @@
         "schemas": {
             "CicloResource": {
                 "title": "CicloResource",
-                "description": "Project resource",
+                "description": "**Ciclos**",
                 "properties": {
                     "data": {
                         "title": "data",
                         "description": "Data wrapper",
-                        "type": "array",
-                        "items": {}
+                        "properties": {
+                            "id": {
+                                "title": "ID",
+                                "description": "Identificador único del ciclo",
+                                "type": "integer",
+                                "example": 1
+                            },
+                            "ciclo": {
+                                "title": "Ciclo",
+                                "description": "Nombre del Ciclo",
+                                "type": "string",
+                                "example": "CFM APD (LOE)"
+                            },
+                            "vliteral": {
+                                "title": "Vliteral",
+                                "description": "Nombre completo del Ciclo en valencià",
+                                "type": "string",
+                                "example": "Atenció a persones en situació de dependència"
+                            },
+                            "cliteral": {
+                                "title": "Cliteral",
+                                "description": "Nombre completo del Ciclo en castellano",
+                                "type": "string",
+                                "example": "Atención a personas en situación de dependencia"
+                            },
+                            "idFamilia": {
+                                "title": "IDFamilia",
+                                "description": "Identificador único de la familia a la que pertenece",
+                                "type": "integer",
+                                "example": 1
+                            },
+                            "responsable": {
+                                "title": "Responsable",
+                                "description": "Identificador único del usuario responsable del ciclo",
+                                "type": "integer",
+                                "example": 1
+                            }
+                        },
+                        "type": "object"
                     }
                 },
                 "type": "object",
